--- a/siscop-caritas-web/src/main/webapp/MttoPersonas.xhtml
+++ b/siscop-caritas-web/src/main/webapp/MttoPersonas.xhtml
@@ -19,7 +19,7 @@
                                 <p:tab id="busqueda" title="Búsqueda">
                                     <p:menubar>
                                         <p:menuitem value="Buscar" actionListener="#{mttoPersona.buscar()}" 
-                                                    icon="ui-icon-search" update="@form"  />
+                                                    icon="fa fa-search" update="@form"  />
                                         <p:menuitem value="Limpiar" action="#{mttoPersona.limpiarBusquedaPersonas()}"
                                                     update="tabs lista" icon="fa fa-eraser" />
                                     </p:menubar>
@@ -65,12 +65,13 @@
 
                                     <p:menubar>
                                         <p:menuitem value="Nuevo" action="#{mttoPersona.nuevaPersona()}"
-                                                    icon="ui-icon-search"
+                                                    icon="fa fa-user-plus"
                                                     update="lista datosper 
                                                     otraInfo
                                                     :principal:growl"
                                                     />
-                                        <p:menuitem value="Guardar" action="#{mttoPersona.guardarPersona()}" icon="ui-icon-refresh"                                                
+                                        <p:menuitem value="Guardar" action="#{mttoPersona.guardarPersona()}"
+                                                    icon="fa fa-save"                                                
                                                     update="lista :principal:growl otraInfo" />
                                     </p:menubar>
                                     <p:panelGrid id="datosper" columns="4" styleClass="ui-panelgrid-blank">
@@ -121,7 +122,7 @@
 
                                     <p:tabView id="otraInfo">
 
-                                        <p:tab id="documentos" title="Documentos Personales">
+                                        <p:tab id="documentos" title="Documentos Personales" >
                                             <p:panelGrid id="datosDoc" columns="5" styleClass="ui-panelgrid-blank">
                                                 <p:outputLabel for="seltipdoc" value="Tipo:" />
                                                 <p:selectOneMenu id="seltipdoc" value="#{mttoPersona.tipoDoc}">
@@ -130,7 +131,8 @@
                                                 </p:selectOneMenu>
                                                 <p:outputLabel for="numdoc" value="Número" />
                                                 <p:inputText id="numdoc" value="#{mttoPersona.numeroDoc}" size="25"/>                                            
-                                                <p:commandButton value="Agregar" 
+                                                <p:commandButton value="Agregar"
+                                                                 icon="fa fa-plus"
                                                                  actionListener="#{mttoPersona.agregarDocumento()}" 
                                                                  update="listaDocs 
                                                                  :principal:tabs:otraInfo:datosDoc 
@@ -164,7 +166,8 @@
                                                 <p:outputLabel for="noTel" value="Número" />
                                                 <p:inputMask id="noTel" mask="9999-9999" value="#{mttoPersona.numeroTel}"/>
                                                 <p:commandButton value="Agregar" 
-                                                                 actionListener="#{mttoPersona.agregarTelefono()}" 
+                                                                 actionListener="#{mttoPersona.agregarTelefono()}"
+                                                                 icon="fa fa-plus"
                                                                  update="listaTel 
                                                                  :principal:tabs:otraInfo:datosTel
                                                                  :principal:growl" />
@@ -199,7 +202,8 @@
                                                              onkeyup="this.value = this.value.toUpperCase();"
                                                              size="50" style="text-transform: uppercase"/>
                                                 <p:commandButton value="Agregar" 
-                                                                 actionListener="#{mttoPersona.agregarDireccion()}" 
+                                                                 actionListener="#{mttoPersona.agregarDireccion()}"
+                                                                 icon="fa fa-plus"
                                                                  update="listaDir
                                                                  :principal:tabs:otraInfo:datosDir 
                                                                  :principal:growl" />
