--- a/siscop-caritas-web/src/main/webapp/MttoProveedores.xhtml
+++ b/siscop-caritas-web/src/main/webapp/MttoProveedores.xhtml
@@ -114,7 +114,8 @@
                                             <div class="ui-g-3" >
                                                 <p:outputLabel for="fNac" value="Fecha de Nacimiento:" />
                                                 <p:calendar id="fNac" value="#{mttoProveedor.fechaNacimiento}"
-                                                            pattern="dd-MM-yyyy" mask="true"/>
+                                                            pattern="dd-MM-yyyy" mask="true"
+                                                            locale="es"/>
                                             </div>
                                             <div class="ui-g-3" >
                                                 <p:outputLabel for="selectOneCBSexo" value="Sexo:" />
